[#101] Style: LexoRankUtil null 처리